--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{% static 'backend/css/main.css' %}" type="text/css">
+	<link rel="stylesheet" type="text/css" href="{% static 'backend/slick/slick.css' %}"/>
+	<link rel="stylesheet" type="text/css" href="{% static 'backend/slick/slick-theme.css' %}"/>
 	<title>Сервисы Профсоюзной организации</title>
 </head>
 <body>
@@ -16,5 +18,10 @@
 
 
 	{% block navigation %} {% endblock %}
+
+	<script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+
+	<script type="text/javascript" src="{% static 'backend/slick/slick.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'backend/js/main.js' %}"></script>
 </body>
 </html>
