--- a/backend/static/backend/css/main.css
+++ b/backend/static/backend/css/main.css
@@ -1,10 +1,25 @@
+@font-face {
+    font-family: 'Gilroy Bold';
+    src: url('../fonts/gilroy-bold.ttf') format("truetype");
+}
+
+@font-face {
+    font-family: 'Gilroy Extrabold';
+    src: url('../fonts/gilroy-extrabold.ttf') format("truetype");
+}
+
+@font-face {
+    font-family: 'Gilroy Regular';
+    src: url('../fonts/gilroy-regular.ttf') format("truetype");
+}
+
 * {
 	padding: 0;
 	margin: 0;
 }
 
-.header {
-	height: 300px;
+body {
+	overflow-x: hidden;
 }
 
 .top {
@@ -37,6 +52,7 @@
 }
 
 .bottom li a {
+	font-family: 'Gilroy Bold';
 	text-decoration: none;
 	color: #777E90;
 }
@@ -44,4 +60,109 @@
 .bottom li a:hover {
 	color: #000;
 	transition: .2s ease;
+}
+
+
+.carousel {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+.carousel-item {
+	background: #000;
+	color: #fff;
+}
+
+.carousel-item img {
+	width: 100%;
+	height: 580px;
+	object-fit: cover;
+}
+
+
+.carousel .slick-dots {
+	z-index: 999;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	bottom: 15px;
+}
+
+
+.carousel .slick-dots li {
+	list-style: none;
+	margin: 0 10px;
+}
+	
+
+.carousel .slick-dots button {
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	background-color: #fff;
+	font-size: 0;
+}
+
+.carousel .slick-dots button::before {
+	content: '';
+	font-size: 0;
+}
+
+.slick-dots li.slick-active button {
+	background-color: #141416;
+}
+
+
+.header-content {
+	width: 100%;
+	height: 580px;
+	position: relative;
+}
+
+.header-content .carousel {
+	position: absolute;
+}
+
+.header-content .content {
+	position: absolute;
+	padding-left: 100px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+	color: #fff;
+}
+
+.header-content .content .content-wrap {
+	width: 600px;
+}
+
+.header-content .content p {
+	font-family: 'Gilroy Regular';
+	margin-bottom: 40px;
+	font-size: 24px;
+}
+
+.header-content .content h2 {
+	font-family: 'Gilroy Bold';
+	margin-bottom: 40px;
+	font-size: 52px;
+}
+
+
+.header-content .content button {
+	text-transform: uppercase;
+	font-family: 'Gilroy Bold';
+	font-size: 18px;
+	color: #fff;
+	background-color: #4175DB;
+	width: 200px;
+	height: 60px;
+	border: none;
+	border-radius: 90px;
+	cursor: pointer;
 }
