--- a/backend/templates/backend/index.html
+++ b/backend/templates/backend/index.html
@@ -7,18 +7,96 @@
 
 <div class="header-content">
 	<div class="carousel">
+	  <div class="carousel-item"><img src="{% static 'backend/images/slider/3.jpg' %}" alt=""></div>
 	  <div class="carousel-item"><img src="{% static 'backend/images/slider/1.jpg' %}" alt=""></div>
 	  <div class="carousel-item"><img src="{% static 'backend/images/slider/2.jpg' %}" alt=""></div>
 	</div>
 	<div class="content">
 		<div class="content-wrap">
-			<p>Стремление к совершенству</p>
-			<h2>Профорганизация Московского Политеха</h2>
-			<button>Вступить</button>
+			<p class="gr">Стремление к совершенству</p>
+			<h2 class="gb">Профорганизация Московского Политеха</h2>
+			<button class="gb">Вступить</button>
 		</div>
 	</div>
 </div>
 
+<div class="employees">
+	<h2 class="section-title gb">
+		Кто члены профсоюза?
+	</h2>
+	<div class="employees-wrap gb">
+		<div class="employees-block">
+			<p class="employees-wrap-title">Студенты</p>
+			<p class="employees-wrap-p gr">более <span class="employees-wrap-count gb">2 000</span></p>
+		</div>
+		<div class="employees-block">
+			<p class="employees-wrap-title">Сотрудники</p>
+			<p class="employees-wrap-p gr">более <span class="employees-wrap-count gb">2 000</span></p>
+		</div>
+	</div>
+</div>
+
+<div class="news">
+	<h2 class="section-title gb">
+		Последние новости
+	</h2>
+	<div class="news-wrap">
+		<div class="news-card">
+			<img class="news-img" src="{% static 'backend/images/news/1.jpg' %}" alt="">
+			<div class="news-description">
+				<div class="news-description-top">
+					<p class="news-description-p gr">
+						<a href="#">
+							В Московском Политехе завершился осенний фестиваль детского творчества и спорта «Умка–2023»
+						</a>
+					</p>
+					<p class="news-date gb">23.12.2023</p>
+				</div>
+				<div class="news-description-bottom">
+					<button class="read-more gb">Читать далее</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="news-card">
+			<img class="news-img" src="{% static 'backend/images/news/2.jpg' %}" alt="">
+			<div class="news-description">
+				<div class="news-description-top">
+					<p class="news-description-p gr">
+						<a href="#">
+							В Московском Политехе завершился осенний фестиваль детского творчества и спорта «Умка–2023»
+						</a>
+					</p>
+					<p class="news-date gb">23.12.2023</p>
+				</div>
+				<div class="news-description-bottom">
+					<button class="read-more gb">Читать далее</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="news-card">
+			<img class="news-img" src="{% static 'backend/images/news/3.jpg' %}" alt="">
+			<div class="news-description">
+				<div class="news-description-top">
+					<p class="news-description-p gr">
+						<a href="#">
+							В Московском Политехе завершился осенний фестиваль детского творчества и спорта «Умка–2023»
+						</a>
+					</p>
+					<p class="news-date gb">23.12.2023</p>
+				</div>
+				<div class="news-description-bottom">
+					<button class="read-more gb">Читать далее</button>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	<button class="learn-more gr">
+		Узнать больше
+	</button>
+</div>
 
 {% endblock %}
 
