сверстаны вопросы с каруселью

--- a/backend/templates/backend/index.html
+++ b/backend/templates/backend/index.html
@@ -98,5 +98,132 @@
 	</button>
 </div>
 
+
+<div class="quiestions">
+	<h2 class="section-title gb">
+		Часто задаваемые вопросы
+	</h2>
+	<!-- <div class="quiestions-wrap"> -->
+		<div class="carousel-questions">
+			
+			<div class="carousel-questions-item">
+				<div class="questions-card">
+					<div class="question">
+						<p class="gb">Как получить материальную помощь?</p>
+					</div>
+						<!-- <img class="news-img" src="{% static 'backend/images/news/1.jpg' %}" alt=""> -->
+					<div class="questions-description">
+						<p class="questions-description-p gr">
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="carousel-questions-item">
+				<div class="questions-card">
+					<div class="question">
+						<p class="gb">Как получить материальную помощь?</p>
+					</div>
+						<!-- <img class="news-img" src="{% static 'backend/images/news/1.jpg' %}" alt=""> -->
+					<div class="questions-description">
+						<p class="questions-description-p gr">
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="carousel-questions-item">
+				<div class="questions-card">
+					<div class="question">
+						<p class="gb">Как получить материальную помощь?</p>
+					</div>
+						<!-- <img class="news-img" src="{% static 'backend/images/news/1.jpg' %}" alt=""> -->
+					<div class="questions-description">
+						<p class="questions-description-p gr">
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="carousel-questions-item">
+				<div class="questions-card">
+					<div class="question">
+						<p class="gb">Как получить материальную помощь?</p>
+					</div>
+						<!-- <img class="news-img" src="{% static 'backend/images/news/1.jpg' %}" alt=""> -->
+					<div class="questions-description">
+						<p class="questions-description-p gr">
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="carousel-questions-item">
+				<div class="questions-card">
+					<div class="question">
+						<p class="gb">Как получить материальную помощь?</p>
+					</div>
+						<!-- <img class="news-img" src="{% static 'backend/images/news/1.jpg' %}" alt=""> -->
+					<div class="questions-description">
+						<p class="questions-description-p gr">
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="carousel-questions-item">
+				<div class="questions-card">
+					<div class="question">
+						<p class="gb">Как получить материальную помощь?</p>
+					</div>
+						<!-- <img class="news-img" src="{% static 'backend/images/news/1.jpg' %}" alt=""> -->
+					<div class="questions-description">
+						<p class="questions-description-p gr">
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="carousel-questions-item">
+				<div class="questions-card">
+					<div class="question">
+						<p class="gb">Как получить материальную помощь?</p>
+					</div>
+						<!-- <img class="news-img" src="{% static 'backend/images/news/1.jpg' %}" alt=""> -->
+					<div class="questions-description">
+						<p class="questions-description-p gr">
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="carousel-questions-item">
+				<div class="questions-card">
+					<div class="question">
+						<p class="gb">Как получить материальную помощь?</p>
+					</div>
+						<!-- <img class="news-img" src="{% static 'backend/images/news/1.jpg' %}" alt=""> -->
+					<div class="questions-description">
+						<p class="questions-description-p gr">
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+						</p>
+					</div>
+				</div>
+			</div>
+			
+
+			
+
+		</div>
+	<!-- </div> -->
+</div>
+
 {% endblock %}
 
