--- a/backend/static/backend/css/main.css
+++ b/backend/static/backend/css/main.css
@@ -223,6 +223,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-bottom: 60px;
 }
 
 .news-card {
@@ -274,6 +275,7 @@ body {
 }
 
 .news-description-p a {
+	font: 20px;
 	color: #141416;
 	text-decoration: none;
 }
@@ -310,4 +312,79 @@ body {
 	width: 225px;
 	height: 55px;
 	cursor: pointer;
+}
+
+
+.slick-track {
+    margin:auto;
+
+}
+
+.slick-slide {
+	margin: 0 27px;
+}
+
+/* the parent */
+.slick-list {
+/*	width: 1300px;*/
+	height: 345px;
+	margin: 0 -27px;
+}
+
+
+.carousel-questions {
+	width: 100%;
+	height: 345px;
+}
+
+
+.carousel-questions-item {
+/*	padding-left: 50%;*/
+}
+
+.questions-card {
+	position: relative;
+	width: 100%;
+	height: 345px;
+	background-color: #f5f5f5;
+	border-radius: 20px;
+}
+
+
+.carousel-questions .slick-dots {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	bottom: -50px;
+}
+
+
+.carousel-questions .slick-dots li {
+	list-style: none;
+	margin: 0 10px;
+}
+	
+
+.carousel-questions .slick-dots button {
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	background-color: #E1E5EE;
+	font-size: 0;
+}
+
+.carousel-questions .slick-dots button::before {
+	content: '';
+	font-size: 0;
+}
+
+.carousel-questions .slick-dots li.slick-active button {
+	background-color: #000;
+}
+
+.quiestions {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
