сверстан футер и партнеры

--- a/backend/templates/backend/index.html
+++ b/backend/templates/backend/index.html
@@ -225,5 +225,29 @@
 	<!-- </div> -->
 </div>
 
+
+<div class="partners">
+	<h2 class="section-title gb">
+		Главные партнеры
+	</h2>
+	<div class="partners-wrap">
+		<div class="partners-card">
+			<img class="partners-img" src="{% static 'backend/images/news/1.jpg' %}" alt="">
+		</div>
+
+		<div class="partners-card">
+			<img class="partners-img" src="{% static 'backend/images/news/2.jpg' %}" alt="">
+		</div>
+
+		<div class="partners-card">
+			<img class="partners-img" src="{% static 'backend/images/news/3.jpg' %}" alt="">
+		</div>
+
+		<div class="partners-card">
+			<img class="partners-img" src="{% static 'backend/images/news/1.jpg' %}" alt="">
+		</div>
+	</div>
+</div>
+
 {% endblock %}
 
