--- a/backend/static/backend/css/main.css
+++ b/backend/static/backend/css/main.css
@@ -315,17 +315,17 @@ body {
 }
 
 
-.slick-track {
+.carousel-questions .slick-track {
     margin:auto;
 
 }
 
-.slick-slide {
+.carousel-questions .slick-slide {
 	margin: 0 27px;
 }
 
 /* the parent */
-.slick-list {
+.carousel-questions .slick-list {
 /*	width: 1300px;*/
 	height: 345px;
 	margin: 0 -27px;
@@ -387,4 +387,96 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-bottom: 60px;
+}
+
+
+
+
+
+.partners {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 60px;
+}
+
+.partners-card {
+	overflow: hidden;
+	position: relative;
+	border-radius: 25px;
+	margin-bottom: 20px;
+	width: 340px;
+	height: 170px;
+}
+
+.partners-img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+/*	border-radius: 25px;*/
+}
+
+.partners-wrap {
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+}
+
+
+footer {
+	display: flex;
+	justify-content: center;
+	background-color: #F4F5F6;
+}
+
+.footer {
+	width: 80%;
+}
+
+.footer .contacts-title {
+	font-size: 28px;
+	margin: 60px 0;
+	color: #141416;
+}
+
+.footer .footer-title {
+	color: #3b5266;
+}
+
+.help-section {
+	width: 330px;
+	line-height: 30px;
+	margin-right: 120px;
+}
+
+.help-section p {
+	color: #353945;
+	font-size: 25px;
+	margin-bottom: 20px;
+
+}
+
+.footer-wrap {
+	display: flex;
+}
+
+.tdu {
+	text-decoration: underline;
+}
+
+.footer-copy {
+	text-align: center;
+	color: #95a1bb;
+	font-size: 22px;
+	margin-bottom: 20px;
+}
+
+.socials {
+	text-align: right;
+}
+
+.vk-link {
+	margin-right: 30px;
 }
