--- a/backend/static/backend/css/main.css
+++ b/backend/static/backend/css/main.css
@@ -145,7 +145,7 @@ body {
 
 .header-content .content {
 	position: absolute;
-	padding-left: 100px;
+/*	padding-left: 100px;*/
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -157,6 +157,7 @@ body {
 
 .header-content .content .content-wrap {
 	width: 600px;
+	padding-left: 100px;
 }
 
 .header-content .content p {
@@ -226,6 +227,10 @@ body {
 	margin-bottom: 60px;
 }
 
+.invisible {
+	opacity: 0;
+}
+
 .news-card {
 	overflow: hidden;
 	position: relative;
@@ -253,6 +258,9 @@ body {
 	bottom: 0;
 	background-color: #fff;
 	color: #000;
+
+	opacity: 0;
+	transition: .3s;
 }
 
 .news-description .news-date {
@@ -300,7 +308,7 @@ body {
 .news-wrap {
 	display: flex;
 	justify-content: space-around;
-	width: 60%;
+	width: 80%;
 }
 
 .news .learn-more {
@@ -321,21 +329,23 @@ body {
 }
 
 .carousel-questions .slick-slide {
-	margin: 0 27px;
+	margin: 0 32px;
 }
 
 /* the parent */
 .carousel-questions .slick-list {
-/*	width: 1300px;*/
+	width: 80%;
 	height: 345px;
-	margin: 0 -27px;
+/*	margin: 0 -32px;*/
 }
 
 
 .carousel-questions {
 	width: 100%;
 	height: 345px;
+	display: flex;
 }
+
 
 
 .carousel-questions-item {
@@ -348,6 +358,30 @@ body {
 	height: 345px;
 	background-color: #f5f5f5;
 	border-radius: 20px;
+/*	padding: 20px;*/
+	user-select: text;
+}
+
+.questions-description {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	padding: 20px;
+	opacity: 0;
+	transition: .3s;
+	font-size: 19px;
+}
+
+.question {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: .3s;
+	font-size: 25px;
+	text-align: center;
 }
 
 
@@ -390,6 +424,10 @@ body {
 	margin-bottom: 60px;
 }
 
+.quiestions .slick-slider {
+	display: flex;
+	justify-content: center;
+}
 
 
 
