--- a/backend/templates/backend/index.html
+++ b/backend/templates/backend/index.html
@@ -43,7 +43,7 @@
 	<div class="news-wrap">
 		<div class="news-card">
 			<img class="news-img" src="{% static 'backend/images/news/1.jpg' %}" alt="">
-			<div class="news-description">
+			<div class="news-description invisible">
 				<div class="news-description-top">
 					<p class="news-description-p gr">
 						<a href="#">
@@ -60,7 +60,7 @@
 
 		<div class="news-card">
 			<img class="news-img" src="{% static 'backend/images/news/2.jpg' %}" alt="">
-			<div class="news-description">
+			<div class="news-description invisible">
 				<div class="news-description-top">
 					<p class="news-description-p gr">
 						<a href="#">
@@ -77,7 +77,7 @@
 
 		<div class="news-card">
 			<img class="news-img" src="{% static 'backend/images/news/3.jpg' %}" alt="">
-			<div class="news-description">
+			<div class="news-description invisible">
 				<div class="news-description-top">
 					<p class="news-description-p gr">
 						<a href="#">
@@ -199,6 +199,9 @@
 					<div class="questions-description">
 						<p class="questions-description-p gr">
 							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через личный кабинет (http://stud.mami.ru) с приложением необходимых документов:
+							Для получения материальной помощи необходимо:<br>1. Подать заявление через 
 						</p>
 					</div>
 				</div>
