--- a/backend/templates/backend/include/header.html
+++ b/backend/templates/backend/include/header.html
@@ -6,10 +6,10 @@
     </div>
     <div class="bottom">
         <ul class="menu">
-            <li class="menu-item"><a href="#">Главная</a></li>
+            <li class="menu-item"><a href="{% url 'home'%}">Главная</a></li>
             <li class="menu-item"><a href="#">Документы</a></li>
             <li class="menu-item"><a href="#">Льготы</a></li>
-            <li class="menu-item"><a href="#">Новости</a></li>
+            <li class="menu-item"><a href="{% url 'news' %}">Новости</a></li>
             <li class="menu-item"><a href="#">Контакты</a></li>
         </ul>
     </div>
